Definizione struttura pagina

--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,15 @@
 #stripe5 {
   background-color: DarkSalmon;
 }
+
+#stripe6 {
+  background-color: DarkSlateGrey;
+}
+
+#stripe7 {
+  background-color: LightBlue;
+}
+
+footer {
+  background-color: Plum;
+}
