--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,6 @@ header .header-top .nav-right ul li:last-child a {
   position: relative;
 }
 
-
 #stripe6 .ms_box::before {
   content:'\f053';
   font-size: 2em;
@@ -445,8 +444,6 @@ header .header-top .nav-right ul li:last-child a {
   transform: translateY(-50%);
   cursor: pointer;
 }
-
-
 
 #stripe6 .ms_box::after {
   content:'\f054';
@@ -474,14 +471,30 @@ header .header-top .nav-right ul li:last-child a {
 }
 /* /fascia 6 */
 
-
-
-
-
-
+/* Inizio fascia 7 */
 #stripe7 {
-  background-color: LightBlue;
+  background-image: linear-gradient(to bottom right, #0048c5, #001e9a);
+  padding: 50px 0;
 }
+
+#stripe7 h2 {
+  color: white;
+}
+
+#stripe7 a {
+  margin-top: 20px;
+  padding: 10px 15px;
+  font-size: 1em;
+  font-weight: 700;
+  border: 1px solid #ccc;
+  color: #006aff;
+}
+
+#stripe7 a:hover {
+  background-color: rgb(245, 245, 245);
+}
+/* /fascia 7 */
+
 
 footer {
   background-color: Plum;
