--- a/css/style.css
+++ b/css/style.css
@@ -495,13 +495,54 @@ header .header-top .nav-right ul li:last-child a {
 }
 /* /fascia 7 */
 
-
+/* Inizio footer */
 footer {
-  background-color: Plum;
+  padding: 50px 0;
+  background-color: #031C4E;
+  color: #8b94a9;
 }
 
+footer small {
+  display: inline-block;
+  width: 100%;
+  font-weight: 600;
+}
 
+footer small:nth-of-type(1) {
+  margin-top: 10px;
+}
 
+footer small:nth-of-type(2) {
+  color: #7a859d
+}
+
+footer .social {
+  margin-top: 10px;
+  font-size: 1.5em;
+  color: #7a859d
+}
+
+footer .social i {
+  margin-right: 5px;
+  margin-bottom: 30px;
+}
+
+footer li:first-child {
+  margin-bottom: 5px;
+  font-size: 1.05em;
+  font-weight: 500;
+  color: white;
+}
+
+footer li {
+  line-height: 1.6;
+}
+
+footer li a {
+  color: #7a859d;
+  font-size: 0.9em;
+}
+/* /footer */
 
 
 
@@ -542,6 +583,10 @@ footer {
     display: none;
   }
 
+  footer ul {
+    margin-top: 15px;
+  }
+
 }
 
 
@@ -554,6 +599,10 @@ footer {
 
   .jumbotron p {
     margin: 20px 0;
+  }
+
+  footer ul.ms_mtop {
+    margin-top: 20px;
   }
 
 }
